fix(slc): Added missing timeout to gunicorn

--- a/duui-slc/stanza/src/main/docker/Dockerfile
+++ b/duui-slc/stanza/src/main/docker/Dockerfile
@@ -35,5 +35,5 @@ HEALTHCHECK --interval=30s --timeout=5s \
         --data '{"text": "Barack Obama was born in Hawaii.", "language": "en", "sentences": [{"begin": 0, "end": 32}]}' \
         localhost:9714/v1/process || exit 1
 
-ENTRYPOINT [ "gunicorn", "wsgi:app", "-b", "0.0.0.0:9714", "-k", "uvicorn.workers.UvicornWorker" ]
+ENTRYPOINT [ "gunicorn", "wsgi:app", "-b", "0.0.0.0:9714", "-k", "uvicorn.workers.UvicornWorker", "--timeout", "3600" ]
 CMD [ "-w", "1" ]
