minor(slc-stanza): Downgraded to CUDA 12.1

--- a/duui-slc/stanza/src/main/docker/Dockerfile
+++ b/duui-slc/stanza/src/main/docker/Dockerfile
@@ -1,19 +1,20 @@
 ARG VERSION
-ARG CUDA_NAME="cu124"
-ARG CUDA_VERSION="12.4.1"
+ARG CUDA_NAME="cu121"
+ARG CUDA_VERSION="12.1.1"
 
 FROM docker.texttechnologylab.org/duui-slc-base/${CUDA_NAME}:${VERSION} as base
 
 FROM ghcr.io/mamba-org/micromamba:jammy-cuda-${CUDA_VERSION} as mamba
 
 RUN micromamba install -y -n base -c conda-forge python=3.11 fastapi=0.110.3 uvicorn=0.30.1 gunicorn=22.0.0 && micromamba clean --all --yes
+RUN micromamba install -y -n base pytorch pytorch-cuda=${CUDA_VERSION%.*} -c pytorch -c nvidia -c conda-forge && micromamba clean --all --yes
 
 FROM mamba as stanza
 
 ENV ANNOTATOR_NAME="duui-slc-stanza"
 ENV VERSION="${VERSION}"
 
-RUN micromamba install -y -n base -c conda-forge stanza=1.5.1 && micromamba clean --all --yes
+RUN micromamba install -y -n base -c conda-forge stanza-with-transformers=1.5.1 && micromamba clean --all --yes
 
 ARG MAMBA_DOCKERFILE_ACTIVATE=1
 ENV PATH=/opt/conda/bin/:$PATH
