--- a/duui-slc/stanza/justfile
+++ b/duui-slc/stanza/justfile
@@ -9,7 +9,7 @@ export CUDA_VERSION := "12.1.1"
 export VERSION := "0.3.1"
 
 export REPOSITORY := "docker.texttechnologylab.org"
-export BASE_NAME := "duui-slc-stanza"
+export ANNOTATOR_NAME := "duui-slc-stanza"
 
 build version=VERSION:
     just base {{version}}
@@ -17,17 +17,17 @@ build version=VERSION:
         --build-arg CUDA_NAME="{{CUDA_NAME}}" \
         --build-arg CUDA_VERSION="{{CUDA_VERSION}}" \
         --build-arg VERSION="{{VERSION}}" \
-        -t {{REPOSITORY}}/{{BASE_NAME}}/{{CUDA_NAME}}:{{version}} \
+        -t {{REPOSITORY}}/{{ANNOTATOR_NAME}}/{{CUDA_NAME}}:{{version}} \
         -f src/main/docker/Dockerfile src/main/
 
 test version=VERSION:
-    docker container ls | grep {{BASE_NAME}}-test && docker stop {{BASE_NAME}}-test && docker rm {{BASE_NAME}}-test || echo ""
-    docker run --rm --name {{BASE_NAME}}-test -d -p 9714:9714 {{REPOSITORY}}/{{BASE_NAME}}/{{CUDA_NAME}}:{{version}}
+    docker container ls | grep {{ANNOTATOR_NAME}}-test && docker stop {{ANNOTATOR_NAME}}-test && docker rm {{ANNOTATOR_NAME}}-test || echo ""
+    docker run --rm --name {{ANNOTATOR_NAME}}-test -d -p 9714:9714 {{REPOSITORY}}/{{ANNOTATOR_NAME}}/{{CUDA_NAME}}:{{version}}
     sleep 2 && mvn test || echo "Tests failed"
-    docker stop {{BASE_NAME}}-test
+    docker stop {{ANNOTATOR_NAME}}-test
 
 tag version=VERSION as="latest":
-    docker tag {{REPOSITORY}}/{{BASE_NAME}}/{{CUDA_NAME}}:{{version}} {{REPOSITORY}}/{{BASE_NAME}}/{{CUDA_NAME}}:latest
+    docker tag {{REPOSITORY}}/{{ANNOTATOR_NAME}}/{{CUDA_NAME}}:{{version}} {{REPOSITORY}}/{{ANNOTATOR_NAME}}/{{CUDA_NAME}}:latest
 
 push version=VERSION:
-    docker push {{REPOSITORY}}/{{BASE_NAME}}/{{CUDA_NAME}}:{{version}}
+    docker push {{REPOSITORY}}/{{ANNOTATOR_NAME}}/{{CUDA_NAME}}:{{version}}
