--- a/duui-slc/spacy/src/main/docker/Dockerfile
+++ b/duui-slc/spacy/src/main/docker/Dockerfile
@@ -31,7 +31,7 @@ FROM spacy as app
 WORKDIR /duui
 
 COPY --from=base /duui /duui
-COPY ./python/app/specific/*.py /duui/app/specific/
+COPY ./python/app/parser/*.py /duui/app/parser/
 
 HEALTHCHECK --interval=30s --timeout=5s \
     CMD curl --silent --fail \
