fix(slc): Removed healthcheck

--- a/duui-slc/spacy/src/main/docker/Dockerfile
+++ b/duui-slc/spacy/src/main/docker/Dockerfile
@@ -33,12 +33,12 @@ WORKDIR /duui
 COPY --from=base /duui /duui
 COPY ./python/app/parser/*.py /duui/app/parser/
 
-HEALTHCHECK --interval=30s --timeout=5s \
-    CMD curl --silent --fail \
-        -X POST \
-        -H "Content-Type: application/json" \
-        --data '{"text": "This is the first example. And this is the second one.", "language": "en"}' \
-        localhost:9714/v1/process || exit 1
+# HEALTHCHECK --interval=30s --timeout=5s \
+#     CMD curl --silent --fail \
+#         -X POST \
+#         -H "Content-Type: application/json" \
+#         --data '{"text": "This is the first example. And this is the second one.", "language": "en"}' \
+#         localhost:9714/v1/process || exit 1
 
 ENTRYPOINT [ "gunicorn", "wsgi:app", "-b", "0.0.0.0:9714", "-k", "uvicorn.workers.UvicornWorker", "--timeout", "3600" ]
 CMD [ "-w", "1" ]
