--- a/duui-transformers-Emotion/requirements.txt
+++ b/duui-transformers-Emotion/requirements.txt
@@ -1,16 +1,22 @@
-transformers==4.27.4
-torch==1.13.1
-torchvision==0.14.1
-torchaudio==0.13.1
+torch==2.3.0
+torchaudio==2.3.0
+torchvision==0.18.0
+scipy==1.13.1
+transformers==4.41.2
+setfit==1.0.3
+sentencepiece==0.2.0
+protobuf==4.25.3
+germansentiment==1.1.0
+pytorch-lightning==2.2.5
+numpy==1.26.3
+scikit-learn==1.5.0
 nltk==3.7
 fastapi==0.110.0
 dkpro-cassis==0.9.1
 uvicorn[standard]==0.27.1
 pydantic-settings==2.0.2
-pytorch-lightning==1.9.4
 torchmetrics==1.2.0
 six==1.16.0
-sentencepiece==0.1.95
-protobuf==3.19.1
-scipy==1.10.1
 pandas==1.4.3
+emoatlas==0.1.0
+pysentimiento==0.7.3
