--- a/duui-transformers-topic/src/main/docker/Dockerfile
+++ b/duui-transformers-topic/src/main/docker/Dockerfile
@@ -1,46 +1,53 @@
-FROM python:3.8
+FROM python:3.10
 
 WORKDIR /usr/src/app
 
 EXPOSE 9714
 
-# dependencies
-RUN pip install setuptools wheel
 
+# copy scripts
+COPY ./src/main/python/TypeSystemTopic.xml ./TypeSystemTopic.xml
+COPY ./src/main/python/duui_transformers_topic.py ./duui_transformers_topic.py
+COPY ./src/main/python/duui_transformers_topic.lua ./duui_transformers_topic.lua
+COPY ./src/main/python/TopicSpeech.py ./TopicSpeech.py
+
+# dependencies
 COPY ./requirements.txt ./requirements.txt
 RUN pip install -r requirements.txt
 
-RUN python -c "from transformers import pipeline; pipeline('text-classification', model='cardiffnlp/tweet-topic-latest-multi')"
-RUN python -c "from transformers import pipeline; pipeline('text-classification', model='classla/xlm-roberta-base-multilingual-text-genre-classifier')"
-RUN python -c "from transformers import pipeline; pipeline('text-classification', model='chkla/parlbert-topic-german')"
-RUN python -c "from transformers import pipeline; pipeline('text-classification', model='ssharoff/genres')"
-RUN python -c "from transformers import pipeline; pipeline('text-classification', model='manifesto-project/manifestoberta-xlm-roberta-56policy-topics-context-2023-1-1')"
 
+RUN python -c "from transformers import pipeline; pipeline('text-classification', model='KnutJaegersberg/topic-classification-IPTC-subject-labels')"
+RUN python -c "from transformers import AutoModelForSequenceClassification, AutoTokenizer; AutoModelForSequenceClassification.from_pretrained('poltextlab/xlm-roberta-large-manifesto-cap', trust_remote_code=True); AutoTokenizer.from_pretrained('xlm-roberta-large')"
+RUN python -c "from transformers import AutoModelForSequenceClassification, AutoTokenizer; AutoModelForSequenceClassification.from_pretrained('manifesto-project/manifestoberta-xlm-roberta-56policy-topics-context-2023-1-1', trust_remote_code=True); AutoTokenizer.from_pretrained('xlm-roberta-large')"
+RUN python -c "from transformers import pipeline; pipeline('text-classification', model='cardiffnlp/tweet-topic-latest-single')"
+RUN python -c "from transformers import pipeline; pipeline('text-classification', model='chkla/parlbert-topic-german')"
+RUN python -c "from transformers import pipeline; pipeline('text-classification', model='classla/xlm-roberta-base-multilingual-text-genre-classifier')"
+RUN python -c "from transformers import pipeline; pipeline('text-classification', model='ssharoff/genres')"
 
 # log level
-ARG TEXTIMAGER_DUUI_TRANSFORMERS_TOPIC_LOG_LEVEL="DEBUG"
-ENV TEXTIMAGER_DUUI_TRANSFORMERS_TOPIC_LOG_LEVEL=$TEXTIMAGER_DUUI_TRANSFORMERS_TOPIC_LOG_LEVEL
+ARG LOG_LEVEL="DEBUG"
+ENV LOG_LEVEL=$LOG_LEVEL
 
 # config
-ARG TEXTIMAGER_DUUI_TRANSFORMERS_TOPIC_MODEL_CACHE_SIZE=1
-ENV TEXTIMAGER_DUUI_TRANSFORMERS_TOPIC_MODEL_CACHE_SIZE=$TEXTIMAGER_DUUI_TRANSFORMERS_TOPIC_MODEL_CACHE_SIZE
+ARG MODEL_CACHE_SIZE=3
+ENV MODEL_CACHE_SIZE=$MODEL_CACHE_SIZE
 
 # meta data
-ARG TEXTIMAGER_DUUI_TRANSFORMERS_TOPIC_ANNOTATOR_NAME="textimager-duui-transformers-topic"
-ENV TEXTIMAGER_DUUI_TRANSFORMERS_TOPIC_ANNOTATOR_NAME=$TEXTIMAGER_DUUI_TRANSFORMERS_TOPIC_ANNOTATOR_NAME
-ARG TEXTIMAGER_DUUI_TRANSFORMERS_TOPIC_ANNOTATOR_VERSION="unset"
-ENV TEXTIMAGER_DUUI_TRANSFORMERS_TOPIC_ANNOTATOR_VERSION=$TEXTIMAGER_DUUI_TRANSFORMERS_TOPIC_ANNOTATOR_VERSION
+ARG ANNOTATOR_NAME="duui-transformers-topic"
+ENV ANNOTATOR_NAME=$ANNOTATOR_NAME
+ARG ANNOTATOR_VERSION="unset"
+ENV ANNOTATOR_VERSION=$ANNOTATOR_VERSION
+
+# Model Info
+ARG MODEL_VERSION=0.1
+ENV MODEL_VERSION=$MODEL_VERSION
 
 # offline mode for huggingface
 #ARG TEXTIMAGER_DUUI_TRANSFORMERS_SENTIMENT_TRANSFORMERS_OFFLINE=1
 #ENV TRANSFORMERS_OFFLINE=$TEXTIMAGER_DUUI_TRANSFORMERS_SENTIMENT_TRANSFORMERS_OFFLINE
 
-# copy scripts
-COPY ./src/main/resources/TypeSystemTopic.xml ./src/main/resources/TypeSystemTopic.xml
-COPY ./src/main/python/__init__.py ./src/main/python/__init__.py
-COPY ./src/main/python/duui/ ./src/main/python/duui/
-COPY ./src/main/python/textimager_duui_transformers_topic.py ./src/main/python/textimager_duui_transformers_topic.py
-COPY ./src/main/lua/textimager_duui_transformers_topic.lua ./src/main/lua/textimager_duui_transformers_topic.lua
 
-ENTRYPOINT ["uvicorn", "src.main.python.textimager_duui_transformers_topic:app", "--host", "0.0.0.0", "--port" ,"9714"]
+
+
+ENTRYPOINT ["uvicorn", "duui_transformers_topic:app", "--host", "0.0.0.0", "--port" ,"9714"]
 CMD ["--workers", "1"]
