--- a/duui-transformers-topic/pom.xml
+++ b/duui-transformers-topic/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.texttechnologylab.duui</groupId>
     <artifactId>duui-transformers-topic</artifactId>
-    <version>0.1.3</version>
+    <version>0.2.0</version>
 
     <licenses>
         <license>
@@ -47,12 +47,30 @@
         </developer>
     </developers>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        <!--                        add-opens for use in JUnit-Tests...-->
+                    </argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <ttlab.duui.version>f68ca579ab553074f76d061623dc9b00cf508276</ttlab.duui.version>
-        <ttlab.textimager.typesystem.version>e800053e2c09400aca1ca9f5138a62171550b448</ttlab.textimager.typesystem.version>
-        <ttlab.typesystem.version>033beaa593a99c005400f4021ea8d6fa8957e6c3</ttlab.typesystem.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <dkpro.core.version>2.4.0</dkpro.core.version>
+        <!--        <ttlab.duui.version>f68ca579ab553074f76d061623dc9b00cf508276</ttlab.duui.version>-->
+        <!--        <ttlab.typesystem.version>033beaa593a99c005400f4021ea8d6fa8957e6c3</ttlab.typesystem.version>-->
     </properties>
 
     <repositories>
@@ -62,6 +80,18 @@
         </repository>
     </repositories>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.dkpro.core</groupId>
+                <artifactId>dkpro-core-asl</artifactId>
+                <version>${dkpro.core.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <!--<dependency>
             <groupId>com.github.texttechnologylab</groupId>
@@ -69,27 +99,56 @@
             <version>${ttlab.duui.version}</version>
         </dependency>-->
         <dependency>
-            <groupId>org.texttechnologylab</groupId>
+            <groupId>com.github.texttechnologylab</groupId>
             <artifactId>DockerUnifiedUIMAInterface</artifactId>
-            <version>1.0</version>
+            <version>7cef2433b5</version>
         </dependency>
-
-        <dependency>
-            <groupId>com.github.texttechnologylab.textimager-uima</groupId>
-            <artifactId>textimager-uima-types</artifactId>
-            <version>${ttlab.textimager.typesystem.version}</version>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>com.github.texttechnologylab.textimager-uima</groupId>-->
+        <!--            <artifactId>textimager-uima-util</artifactId>-->
+        <!--            <version>${ttlab.textimager.typesystem.version}</version>-->
+        <!--        </dependency>-->
 
         <dependency>
             <groupId>com.github.texttechnologylab</groupId>
             <artifactId>UIMATypeSystem</artifactId>
-            <version>${ttlab.typesystem.version}</version>
+            <version>87578ef43</version>
         </dependency>
+
+        <!--        <dependency>-->
+        <!--            <groupId>org.texttechnologylab.annotation</groupId>-->
+        <!--            <artifactId>typesystem</artifactId>-->
+        <!--            <version>3.0.1</version>-->
+        <!--        </dependency>-->
+
+        <!--        <dependency>-->
+        <!--            <groupId>org.texttechnologylab</groupId>-->
+        <!--            <artifactId>DockerUnifiedUIMAInterface</artifactId>-->
+        <!--            <version>1.3</version>-->
+        <!--        </dependency>-->
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>5.9.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.dkpro.core</groupId>
+            <artifactId>dkpro-core-api-segmentation-asl</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.dkpro.core</groupId>
+            <artifactId>dkpro-core-io-xmi-asl</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.dkpro.core</groupId>
+            <artifactId>dkpro-core-api-resources-asl</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
