fix(spacy-lua-process): Fixed EOS detection for Transformer models

--- a/duui-spacy-lua-process/Dockerfile
+++ b/duui-spacy-lua-process/Dockerfile
@@ -15,11 +15,14 @@ COPY src/main/ /app/
 ARG COMPONENT_NAME="duui-spacy-lua-process"
 ENV COMPONENT_NAME=${COMPONENT_NAME}
 
-ARG VERSION="0.1.0"
+ARG VERSION="0.1.1"
 ENV COMPONENT_VERSION=${VERSION}
 
 ARG SPACY_LANGUAGE="de"
 ENV SPACY_LANGUAGE=${SPACY_LANGUAGE}
+
+ARG SPACY_MODEL_SIZE="trf"
+ENV SPACY_MODEL_SIZE=${SPACY_MODEL_SIZE}
 
 ARG SPACY_BATCH_SIZE=32
 ENV SPACY_BATCH_SIZE=${SPACY_BATCH_SIZE}
