minor(spacy-lua-process): GPU for new spacy images

--- a/duui-spacy-lua-process/Dockerfile
+++ b/duui-spacy-lua-process/Dockerfile
@@ -1,21 +1,19 @@
-FROM nvidia/cuda:12.8.1-cudnn-runtime-ubi8 AS base
+FROM nvcr.io/nvidia/pytorch:25.05-py3 AS base
 
-RUN dnf install -y python3.12 python3.12-pip && python3.12 -m pip install -U pip setuptools wheel
+WORKDIR /workspace/app/
+RUN python3 -m pip install -U 'fastapi[standard]' uvicorn pydantic_settings 'spacy[cuda12x,transformers,lookups]' 'transformers[hf_xet]'
 
-WORKDIR /app/
-RUN python3.12 -m venv venv && ./venv/bin/python -m pip install -U 'spacy[cuda12x]' 'fastapi[standard]' uvicorn pydantic_settings spacy-lookups-data 'transformers[hf_xet]'
+RUN python3 -m spacy download de_core_news_sm && \
+    python3 -m spacy download de_core_news_md && \
+    python3 -m spacy download de_core_news_lg && \
+    python3 -m spacy download de_dep_news_trf
 
-RUN ./venv/bin/python -m spacy download de_core_news_sm && \
-    ./venv/bin/python -m spacy download de_core_news_md && \
-    ./venv/bin/python -m spacy download de_core_news_lg && \
-    ./venv/bin/python -m spacy download de_dep_news_trf
-
-COPY src/main/ /app/
+COPY src/main/ /workspace/app/
 
 ARG COMPONENT_NAME="duui-spacy-lua-process"
 ENV COMPONENT_NAME=${COMPONENT_NAME}
 
-ARG VERSION="0.1.1"
+ARG VERSION="0.2.0"
 ENV COMPONENT_VERSION=${VERSION}
 
 ARG SPACY_LANGUAGE="de"
@@ -27,8 +25,11 @@ ENV SPACY_MODEL_SIZE=${SPACY_MODEL_SIZE}
 ARG SPACY_BATCH_SIZE=32
 ENV SPACY_BATCH_SIZE=${SPACY_BATCH_SIZE}
 
+ARG MAX_LOADED_MODELS=1
+ENV MAX_LOADED_MODELS=${MAX_LOADED_MODELS}
+
 ARG REQUEST_BATCH_SIZE=1024
 ENV REQUEST_BATCH_SIZE=${REQUEST_BATCH_SIZE}
 
-ENTRYPOINT ["./venv/bin/uvicorn", "wsgi:app", "--host", "0.0.0.0", "--port" ,"9714", "--use-colors"]
+ENTRYPOINT ["uvicorn", "wsgi:app", "--host", "0.0.0.0", "--port" ,"9714", "--use-colors"]
 CMD ["--workers", "1"]
