--- a/duui-HeidelTimeExt/pom.xml
+++ b/duui-HeidelTimeExt/pom.xml
@@ -96,6 +96,14 @@
                     <target>21</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <mainClass>org.texttechnologylab.duui.heideltimex.biofid.Component</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -116,6 +124,12 @@
             <groupId>com.github.texttechnologylab</groupId>
             <artifactId>UIMATypeSystem</artifactId>
             <version>3.0.10</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.texttechnologylab</groupId>
+            <artifactId>DockerUnifiedUIMAInterface</artifactId>
+            <version>main-SNAPSHOT</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
