wip(gazetter): v1.7.1, updated gazetteer, lists & build scripts

--- a/duui-gazetteer-rs/Dockerfile
+++ b/duui-gazetteer-rs/Dockerfile
@@ -3,7 +3,7 @@ FROM rust:latest AS builder
 ARG VERSION="latest"
 
 WORKDIR /app/src/
-RUN git clone --branch "$VERSION" "https://github.com/texttechnologylab/gazetteer-rs/" /app/src/
+ADD "https://github.com/texttechnologylab/gazetteer-rs.git#$VERSION" /app/src/
 RUN cargo build --release --no-default-features
 RUN chmod +x /app/src/target/release/gazetteer
 
