--- a/duui-HeidelTimeExt/pom.xml
+++ b/duui-HeidelTimeExt/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.texttechnologylab.duui</groupId>
     <artifactId>heideltimex-biofid</artifactId>
-    <version>3.0.0</version>
+    <version>3.0.1</version>
 
     <repositories>
         <repository>
@@ -107,6 +107,18 @@
         </plugins>
     </build>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>5.13.2</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.uima</groupId>
@@ -135,7 +147,7 @@
         <dependency>
             <groupId>org.texttechnologylab</groupId>
             <artifactId>heideltimex</artifactId>
-            <version>3.0.0</version>
+            <version>3.0.1</version>
         </dependency>
 
         <dependency>
@@ -158,14 +170,7 @@
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>5.13.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.13.0</version>
+            <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
