--- a/duui-HeidelTimeExt/pom.xml
+++ b/duui-HeidelTimeExt/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.texttechnologylab.duui</groupId>
     <artifactId>heideltimex-biofid</artifactId>
-    <version>3.0.1</version>
+    <version>4.0.0</version>
 
     <repositories>
         <repository>
@@ -147,7 +147,7 @@
         <dependency>
             <groupId>org.texttechnologylab</groupId>
             <artifactId>heideltimex</artifactId>
-            <version>3.0.1</version>
+            <version>4.0.0</version>
         </dependency>
 
         <dependency>
@@ -162,12 +162,10 @@
             <version>2.0.17</version>
         </dependency>
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.5.18</version>
-            <scope>compile</scope>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.13.3</version>
         </dependency>
-
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
